# Sonarr-Discord-Stream-Fix

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  MuteDiscordDevice_Config.rc  MuteDiscordDevice_Config.sln  MuteDiscordDevice_Config.vcxproj  README.md  devices.txt  installer.iss  main.cpp  mdd_pure.cpp  mdd_pure.h  resource.h  route_target.txt  version.h
.github/workflows/: release.yml
scripts/: make_icon.ps1  write_rc.ps1
src/: app_common.h  app_config.cpp  app_globals.cpp  app_utils.cpp  audio_device.cpp  config_dialog.cpp  routing.cpp  session_picker.cpp  tray.cpp  wmi_monitor.cpp
tests/: CMakeLists.txt  test_config_serialization.cpp  test_device_config_defaults.cpp  test_device_name_matching.cpp  test_filter_summary.cpp  test_route_target_io.cpp  test_session_fingerprint.cpp  test_utilities.cpp
